<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Direct Call Widget - The widget that makes contacts accessible
  ~ Copyright (C) 2020 Fer P. A.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>
    <array name="pref_onTap_entries">
        <item>@string/pref_onTap_entry_dial</item>
        <item>@string/pref_onTap_entry_call</item>
    </array>
    <array name="pref_onTap_values">
        <item>@string/pref_onTap_value_dial</item>
        <item>@string/pref_onTap_value_call</item>
    </array>
</resources>
