<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Direct Call Widget - The widget that makes contacts accessible
  ~ Copyright (C) 2025 Fer P. A.
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>
    <!-- Keys -->
    <string name="pref_onTap_key" translatable="false">pref_onTap</string>
    <string name="pref_privacy_policy_key" translatable="false">pref_privacy_policy</string>
    <string name="pref_become_btester_key" translatable="false">pref_btester</string>
    <string name="pref_contribute_key" translatable="false">pref_contribute</string>
    <string name="pref_oss_licenses_key" translatable="false">pref_oss_licenses</string>
    <string name="pref_version_key" translatable="false">pref_version</string>

    <!-- Values -->
    <string name="pref_onTap_dial_value" translatable="false">"0"</string>
    <string name="pref_onTap_call_value" translatable="false">"1"</string>
</resources>